# marisa-rs

./: Cargo.toml  LICENSE
marisa-sys/: Cargo.toml  build.rs  marisa_wrapper.hpp
marisa-sys/src/: lib.rs
src/: lib.rs
